--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@android:color/holo_blue_light"
     tools:context="com.andrewmalone.assignmentapp.MainActivity">
 
     <android.support.design.widget.AppBarLayout
