--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,6 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@android:color/holo_blue_light"
     tools:context="com.andrewmalone.assignmentapp.ProfileActivity">
 
 
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@color/authui_inputTextColor" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -48,7 +50,8 @@
         android:text="City:"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:textColor="@color/authui_inputTextColor" />
 
     <EditText
         android:layout_width="match_parent"
@@ -56,7 +59,8 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editText"
-        android:hint="Your City" />
+        android:hint="Your City"
+        android:textColor="@color/authui_inputTextColor" />
 
     <TextView
         android:text="Description:"
@@ -64,7 +68,8 @@
         android:id="@+id/textView4"
         android:layout_alignBottom="@+id/profileDescription"
         android:layout_centerHorizontal="true"
-        android:layout_width="149dp" />
+        android:layout_width="149dp"
+        android:textColor="@color/authui_inputTextColor" />
 
     <EditText
         android:layout_width="match_parent"
@@ -75,7 +80,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:hint="Enter a little piece about yourself"
-        android:layout_weight="0.02" />
+        android:layout_weight="0.02"
+        android:textColor="@color/authui_inputTextColor" />
 
     <Button
         android:text="Show Bikes"
