--- a/app/src/main/res/layout/station_item.xml
+++ b/app/src/main/res/layout/station_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="90dp"
-    android:background="@color/tw__composer_black"
+    android:background="@color/cast_intro_overlay_button_background_color"
     android:padding="4dp">
 
 
@@ -22,14 +23,16 @@
             android:id="@+id/station_item_title"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
             android:textSize="18sp"
-            android:textColor="@color/cardview_light_background" />
+            android:textColor="@color/cardview_light_background"
+            android:paddingLeft="10dp" />
 
         <TextView
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/station_item_subtitle"
-            android:textColor="@color/cardview_light_background" />
+            android:textColor="@color/cardview_light_background"
+            android:paddingLeft="10dp" />
 
 
     </LinearLayout>
@@ -46,7 +49,8 @@
         android:layout_height="15dp"
         android:id="@+id/textView5"
         android:background="@color/colorAccent"
-            android:textColor="@color/cardview_light_background" />
+            android:textColor="@color/cardview_light_background"
+            android:gravity="center" />
 
         <TextView
         android:text="TextView"
@@ -70,7 +74,8 @@
             android:layout_below="@+id/station_item_bikes"
             android:layout_alignParentStart="true"
             android:background="@android:color/holo_orange_light"
-            android:textColor="@color/cardview_light_background" />
+            android:textColor="@color/cardview_light_background"
+            android:gravity="center" />
 
         <TextView
             android:text="TextView"
