--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -23,21 +23,32 @@
         android:layout_weight="1.05"
         android:foregroundGravity="center" />
 
-    <Button
-        android:text="Map View"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="btnMapClick"
-        android:textAlignment="center"
-        android:id="@+id/btnMapView"
-        android:backgroundTint="@color/colorAccent"
-        android:gravity="center" />
+        android:layout_height="wrap_content">
 
-    <Button
+        <Button
         android:text="View Profile"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="btnMapProfile"
+        android:orientation="horizontal"
         android:id="@+id/btnViewProfile"
-        android:backgroundTint="@color/colorAccent" />
+        android:backgroundTint="@color/colorAccent"
+        android:layout_width="match_parent"
+        android:layout_weight=".5"
+        android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:text="Map View"
+            android:layout_height="wrap_content"
+            android:onClick="btnMapClick"
+            android:textAlignment="center"
+            android:id="@+id/btnMapView"
+            android:orientation="horizontal"
+            android:backgroundTint="@color/colorAccent"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_weight=".50"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </LinearLayout>
