--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,18 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@android:color/holo_blue_light"
     tools:context="com.andrewmalone.assignmentapp.ProfileActivity">
 
-
-    <TextView
-        android:text="Select your profile picture:"
-        android:layout_width="291dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textColor="@color/authui_inputTextColor" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -36,22 +26,21 @@
     <Button
         android:text="Select Picture"
         android:layout_marginTop="10dp"
-        android:layout_width="133dp"
-        android:layout_height="34dp"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
         android:id="@+id/selectPictureButton"
         android:layout_above="@+id/textView4"
         android:layout_gravity="center"
         android:onClick="btnClick"
-        android:background="?attr/colorAccent"
-        style="@android:style/Widget.Material.Button.Borderless"
-        android:textColor="@color/com_facebook_button_background_color_focused" />
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_weight="0.00" />
 
     <TextView
-        android:text="City:"
+        android:text="Name:"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textColor="@color/authui_inputTextColor" />
+        android:id="@+id/textView" />
 
     <EditText
         android:layout_width="match_parent"
@@ -59,17 +48,16 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editText"
-        android:hint="Your City"
-        android:textColor="@color/authui_inputTextColor" />
+        android:hint="Your Name"/>
 
     <TextView
         android:text="Description:"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
         android:layout_alignBottom="@+id/profileDescription"
         android:layout_centerHorizontal="true"
-        android:layout_width="149dp"
-        android:textColor="@color/authui_inputTextColor" />
+        android:layout_width="149dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -80,18 +68,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:hint="Enter a little piece about yourself"
-        android:layout_weight="0.02"
-        android:textColor="@color/authui_inputTextColor" />
+        android:layout_weight="0.02"/>
 
     <Button
         android:text="Show Bikes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnGoToList"
-        android:background="?attr/colorAccent"
-        android:onClick="onClick"
-        style="@android:style/Widget.Material.Button.Borderless"
-        android:textColor="@color/com_facebook_button_background_color_focused" />
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:onClick="onClick" />
 
 
 </LinearLayout>
