--- a/app/src/main/res/layout/station_item.xml
+++ b/app/src/main/res/layout/station_item.xml
@@ -1,97 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="90dp"
-    android:background="@color/cast_intro_overlay_button_background_color"
-    android:padding="4dp">
+    android:orientation="horizontal"
+    android:padding="2dp">
 
-
-    <LinearLayout
-        android:layout_weight="5.18"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:background="@color/cardview_light_background"
-        android:orientation="vertical"
-        android:backgroundTint="@color/colorPrimary">
-
-
-        <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:id="@+id/station_item_title"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:textSize="18sp"
-            android:textColor="@color/cardview_light_background"
-            android:paddingLeft="10dp" />
-
-        <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/station_item_subtitle"
-            android:textColor="@color/cardview_light_background"
-            android:paddingLeft="10dp" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="0.23">
-
-        <TextView
-        android:text="Available Bikes:"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:id="@+id/textView5"
-        android:background="@color/colorAccent"
-            android:textColor="@color/cardview_light_background"
-            android:gravity="center" />
+        android:layout_height="match_parent"
+        card_view:cardCornerRadius="1dp">
 
-        <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="26dp"
-        android:id="@+id/station_item_bikes"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textView5"
-        android:textSize="15sp"
-        android:background="@android:color/holo_green_dark"
-            android:gravity="center"
-            android:backgroundTint="@color/colorAccent"
-            android:textColor="@color/cardview_light_background" />
-
-        <TextView
-            android:text="Parking Slots:"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView3"
-            android:layout_below="@+id/station_item_bikes"
-            android:layout_alignParentStart="true"
-            android:background="@android:color/holo_orange_light"
-            android:textColor="@color/cardview_light_background"
-            android:gravity="center" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="26dp"
-            android:id="@+id/station_item_parking"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:layout_alignBaseline="@+id/textView3"
-            android:layout_alignBottom="@+id/textView3"
-            android:layout_toEndOf="@+id/textView3"
-            android:layout_alignStart="@+id/station_item_bikes"
-            android:textSize="15sp"
-            android:background="@android:color/holo_orange_light"
-            android:gravity="center"
-            android:textColor="@color/cardview_light_background" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="7"
+                android:backgroundTint="@color/primary"
+                android:orientation="vertical">
 
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/station_item_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="10"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:text="TextView"
+                    android:textAppearance="@android:style/TextAppearance.Material.Large"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="15dp"
+                        android:gravity="center"
+                        android:text="Available Bikes" />
+
+                    <TextView
+                        android:id="@+id/station_item_bikes"
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:layout_height="26dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/textView5"
+                        android:gravity="center"
+                        android:text="TextView"
+                        android:textAppearance="@android:style/TextAppearance.Material.Large"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/station_item_bikes"
+                        android:gravity="center"
+                        android:text="Parking Slots" />
+
+                    <TextView
+                        android:id="@+id/station_item_parking"
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:layout_height="26dp"
+                        android:layout_alignBaseline="@+id/textView3"
+                        android:layout_alignBottom="@+id/textView3"
+                        android:layout_alignStart="@+id/station_item_bikes"
+                        android:layout_toEndOf="@+id/textView3"
+                        android:gravity="center"
+                        android:text="TextView"
+                        android:textAppearance="@android:style/TextAppearance.Material.Large"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
