--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -24,7 +24,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/bikeListView"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="384dp"
         android:layout_alignParentStart="true"
         android:layout_weight="1.05"
         android:foregroundGravity="center"
@@ -38,25 +38,29 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <Button
-            android:id="@+id/btnFavourites"
+            android:id="@+id/btnGoToList"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight=".5"
+            android:gravity="center"
+            android:onClick="btnMapProfile"
             android:orientation="horizontal"
-            android:text="@string/favourites" />
+            android:text="All Bikes"
+            android:textAlignment="center" />
 
         <Button
             android:id="@+id/btnMapView"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight=".50"
             android:gravity="center"
+            android:onClick="btnMapClick"
             android:orientation="horizontal"
-            android:text="@string/map_view"
+            android:text="Map View"
             android:textAlignment="center" />
     </LinearLayout>
 </LinearLayout>
